# ParallelComputing_ParticleSimulation

./: .gitignore  CMakeLists.txt  common.h  plot.py  run.py
CUDA/: .gitignore  CMakeLists.txt  common.h  cuda.cu  main.cu  opt.cu  thrust_gpu.cu
MPI/: .gitignore  CMakeLists.txt  common.h  main.cpp  mpi.cpp
Naive/: .gitignore  CMakeLists.txt  common.h  naive.cpp
OpenMP/: .gitignore  CMakeLists.txt  common.h  openmp.cpp
Serial/: .gitignore  CMakeLists.txt  common.h  main.cpp  serial.cpp
SerialBinning/: .gitignore  CMakeLists.txt  common.h  main.cpp  serial_binning.cpp
correctness-check/: correctness-check.py
rendering/: .gitignore  render.py
